<resources>
    <string name="app_name">forage-android</string>
    <string name="title_tokenize_card">Tokenize</string>
    <string name="title_dashboard">Catalog</string>
    <string name="title_pos">POS</string>
    <string name="title_balance">Balance</string>
    <string name="title_setup">Setup Authentication</string>
    <string name="title_tokenize_ebt">Tokenize EBT Card</string>
    <string name="title_check_balance">Check Balance</string>
    <string name="title_create_payment">Create A Payment</string>
    <string name="title_capture_payment">Capture Payment</string>
    <string name="submit_button">Submit</string>
    <string name="next_button">Next</string>
    <string name="check_balance_button">Check Balance</string>
    <string name="catalog_first_forage_edit_text_hint">OutlinedBox</string>
    <string name="catalog_second_forage_edit_text_hint">FilledBox</string>
    <string name="catalog_third_forage_edit_text_hint">OutlinedBox customized</string>
    <string name="catalog_fourth_forage_edit_text_hint">EBT card number</string>
    <string name="tokenize_forage_edit_text_hint">PAN</string>
    <string name="bearer">Bearer</string>
    <string name="bearer_token">AbCaccesstokenXyz</string>
    <string name="merchant_account_hint">Merchant Account</string>
    <string name="merchant_account">8000009</string>
    <string name="pin">PIN</string>
    <string name="capture_snap">Capture SNAP</string>
    <string name="defer_capture_snap">Defer SNAP</string>
    <string name="capture_cash">Capture EBT Cash</string>
    <string name="defer_capture_cash">Defer EBT Cash</string>
    <string name="title_pos_merchant_setup">Merchant Setup</string>
    <string name="title_pos_action_selection">Select an Action</string>
    <string name="pos_back_button">Back</string>
    <string name="title_pos_bi_manual_pan_entry">Balance Inquiry</string>
    <string name="title_pos_bi_mag_swipe_pan_entry">Balance Inquiry</string>
    <string name="title_pos_balance_inquiry">Balance Inquiry</string>
    <string name="title_pos_bi_pin_entry">Balance Inquiry</string>
    <string name="title_pos_balance_inquiry_result">Balance Inquiry</string>
    <string name="title_pos_payment_type_selection_screen">Create a Payment / Purchase</string>
    <string name="title_pos_payment_snap_purchase_screen">Create SNAP Purchase</string>
    <string name="title_pos_payment_choose_pan_method">Create a Payment / Purchase</string>
    <string name="title_pos_payment_manual_pan_entry">Create a Payment / Purchase</string>
    <string name="title_pos_payment_pin_entry">Create a Payment / Purchase</string>
    <string name="title_pos_payment_swipe_card_entry">Create a Payment / Purchase</string>
    <string name="title_pos_payment_receipt">Payment Receipt</string>
    <string name="title_pos_payment_ebt_cash">Create EBT Cash Purchase</string>
    <string name="title_pos_payment_cash_withdrawal">Create Cash Withdrawal</string>
    <string name="title_pos_payment_with_cashback">Create EBT Cash with Cashback</string>
    <string name="title_pos_refund_details">Make a Refund / Return</string>
    <string name="title_pos_void_action_selection">Void a Transaction</string>
    <string name="title_pos_refund_pin_entry">Make a Refund / Return</string>
    <string name="title_pos_refund_result">Refund Result</string>
    <string name="title_pos_void_payment">Void a Payment</string>
    <string name="title_pos_void_refund">Void a Refund</string>
    <string name="title_pos_void_payment_result">Void Payment Result</string>
    <string name="title_pos_void_refund_result">Void Refund Result</string>
    <string name="title_pos_defer_payment_result">Deferred Payment Capture Result</string>
    <string name="title_pos_defer_refund_result">Deferred Payment Refund Result</string>
    <string name="pos_restart">Restart</string>
    <string name="pinpad_done">D</string>
</resources>
