<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_complete_flow">

    <fragment
        android:id="@+id/navigation_pos"
        android:name="com.joinforage.android.example.ui.pos.POSFragment"
        android:label="@string/title_pos" />

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="com.joinforage.android.example.ui.catalog.CatalogFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/navigation_complete_flow"
        android:name="com.joinforage.android.example.ui.complete.flow.tokens.FlowTokensFragment"
        android:label="@string/title_setup"
        tools:layout="@layout/fragment_flow_tokens">
    </fragment>

</navigation>